[gd_scene load_steps=6 format=3 uid="uid://827gkmjsmhtu"]

[ext_resource type="Texture2D" uid="uid://bja0wl8tcw71c" path="res://art/backgrounds/background_01.png" id="1_4r1x1"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_alwnr"]
[ext_resource type="PackedScene" uid="uid://i4w7cenijf7x" path="res://Levels/Level01/Level01.tscn" id="2_g8u4f"]
[ext_resource type="Texture2D" uid="uid://bujx43rcy5b85" path="res://art/backgrounds/background_02.png" id="2_p6uge"]

[sub_resource type="LabelSettings" id="LabelSettings_hp4t5"]
font_size = 64

[node name="Menu" type="Node" node_paths=PackedStringArray("ui", "levelContainer", "ipLineEdit", "statusLabel", "notConnectedHBox", "hostHBox")]
script = ExtResource("1_alwnr")
ui = NodePath("UI")
levelContainer = NodePath("Level")
levelScene = ExtResource("2_g8u4f")
ipLineEdit = NodePath("UI/NotConnectedHBox/IPLineEdit")
statusLabel = NodePath("UI/StatusLabel")
notConnectedHBox = NodePath("UI/NotConnectedHBox")
hostHBox = NodePath("UI/HostHBox")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Levels/Level01/Level01.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTrees" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4r1x1")
expand_mode = 2
stretch_mode = 4

[node name="BackgroundHouses" type="TextureRect" parent="UI/BackgroundTrees"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_p6uge")
expand_mode = 2
stretch_mode = 4

[node name="NotConnectedHBox" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 720.0
offset_bottom = 62.0

[node name="HostButton" type="Button" parent="UI/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="UI/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="IPLineEdit" type="LineEdit" parent="UI/NotConnectedHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter IP Adress..."

[node name="HostHBox" type="HBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 315.0
offset_bottom = 62.0

[node name="StartButton" type="Button" parent="UI/HostHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_hp4t5")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/NotConnectedHBox/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/NotConnectedHBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/HostHBox/StartButton" to="." method="_on_start_button_pressed"]
